--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -106,7 +106,7 @@ Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more 
 \noindent Both the first and second phases of randomization were conducted at the family level, so pairs of siblings and twins were jointly randomized into either treatment or control groups.\footnote{Sibling pairs occurred when the two siblings were close enough in age such that both of them were eligible for the program.} Although we know that pairing was based on HRI, maternal IQ, maternal education, maternal age, and gender of the subject, we do not know the original pairs. The study collected an initial sample of 120 families. Twenty-two subjects did not complete the first-phase of treatment as initially assigned by the randomization (see Table~\ref{table:abccompromises}).\footnote{In Appendix~\ref{appendix:methodology}, we compare the observed baseline characteristics of the subjects in Table~\ref{table:abccompromises} to the observed baseline characteristics of the subjects who complied to the initial treatment assignment. We find little evidence of differences.}\\
 
 
-\noindent Of these cases, there were four subjects assigned to treatment who left the study before any data on them was collected. In our main methodology, we assume that they are missing at random. Exercises assuming that these subjects had outcomes identical to the subject with the lowest outcome in the treatment group suggest that, even in this extreme scenario, there is little sensitivity of the estimates to included or deleting them (see Appendix~\ref{appendix:assessingcc}).\\
+\noindent Of these cases, there were four subjects assigned to treatment who left the study before any data on them was collected. In our main methodology, we assume that they are missing at random. Exercises assuming that these subjects had outcomes identical to the subject with the lowest outcome in the treatment group suggest that, even in this extreme scenario, there is little sensitivity of the estimates to including or deleting them (see Appendix~\ref{appendix:assessingcc}).\\
 
 \noindent Second, four subjects died before age 5---two of them initially assigned to treatment and two of them initially assigned to control. For all of them, we observe baseline characteristics and any other data collected before their death. For methodological purposes, they represent cases of program attrition when we do not observe their outcomes.\\
 
@@ -157,7 +157,7 @@ Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more 
 %Direct from the paper
 \noindent Curriculum delivery enabled a highly customized learning experience for treated subjects in both ABC and CARE. Infant caregivers recorded child observations on progress charts and collaborated with FPGC's curriculum developers and academic researchers to rotate learning activities every 2 to 3 weeks for each treated subject.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Campbell_Ramey_1994_CD}.} Preschool rooms featured intentionally organized environments to promote pre-literacy and access to a rich set of learning tools. The full-day curriculum emphasized active learning experiences, dramatic play, and pre-academics. Frequent 1:1 or 2:1 child-adult interactions prioritized language development for social competence. For ages 3 through 5, as the cohorts approached public school entry, classroom experiences were increasingly structured  towards the development of pre-academic skills and ``socio-linguistic and communicative competence.''\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC, Haskins_1985_CD, Ramey_1981_Modification, Ramey_Campbell_1979_SR, Ramey_Smith_1977_AJMD, Ramey_McGinness_etal_1982_Abecedarianapproach, Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}.} FPGC offered a summer program before the start of kindergarten designed to target specific skills to ensure success in a kindergarten classroom (e.g., lining up when exiting the classroom). This program was available to subjects in both the center-based childcare and family education group and the family education group.\footnote{\citet{Ramey_etal_1985_Project-CARE_TiECSE}.} \\
 
-\noindent ABC's and CARE's learning programs were influenced by key developmental theorists.\footnote{This include including Bowlby, Piaget, and Vygotsky. \citep{Sparling_1974_Synth_Edu_Infant_SPEECH,Mcginness_1981_Developing,abc2014-2015interviews}.} All four ABC cohorts and two CARE cohorts participated in curriculum developers Sparling and Lewis' ``Learningames for the First Three Years.''\footnote{ \citet{Sparling_Lewis_1979_BOOKLearninggamesFirstThree}.} The ``Learningames'' were implemented daily by infant and toddler caregivers in 1:1 child-adult interactions. Each ``Learningames'' activity stated a developmentally-appropriate objective, the necessary materials, directions for teacher behavior, and expected child outcome. The activities were designed for use both indoors and outdoors, while dressing, eating, bathing, or during play.\footnote{\citet{Ramey_Campbell_1979_SR, Ramey_1981_Modification,Sparling_Lewis_1979_BOOKLearninggamesFirstThree}.}\\
+\noindent ABC's and CARE's learning programs were influenced by key developmental theorists.\footnote{These include including Bowlby, Piaget, and Vygotsky. \citep{Sparling_1974_Synth_Edu_Infant_SPEECH,Mcginness_1981_Developing,abc2014-2015interviews}.} All four ABC cohorts and two CARE cohorts participated in curriculum developers Sparling and Lewis' ``Learningames for the First Three Years.''\footnote{ \citet{Sparling_Lewis_1979_BOOKLearninggamesFirstThree}.} The ``Learningames'' were implemented daily by infant and toddler caregivers in 1:1 child-adult interactions. Each ``Learningames'' activity stated a developmentally-appropriate objective, the necessary materials, directions for teacher behavior, and expected child outcome. The activities were designed for use both indoors and outdoors, while dressing, eating, bathing, or during play.\footnote{\citet{Ramey_Campbell_1979_SR, Ramey_1981_Modification,Sparling_Lewis_1979_BOOKLearninggamesFirstThree}.}\\
 
 \noindent Supplemental curricula for preschool rooms varied throughout the study, and included ``Cook and Learn,'' ``Peabody Early Experiences Kit,'' ``GOAL Math Program,'' and ``My Friends and Me.''\footnote{ \citet{Greenberg_Epstein_1973_BOOKBridgestoreading,Karnes1973,Dunn_Chun_etal_1976_BOOKPeabodyearlyeducation,Davis_1977_BOOKMyfriends,Wallach_1976_Teaching-All-Children}.}
 %SK notes to co-authors: I'm currently waiting for info from Lynne Vernon-Feagans to potentially include a social worker to the list of staff!
@@ -272,7 +272,7 @@ Note: This plot shows the number of participants in ABC for whom there exists da
 
 \noindent Attrition was low in ABC. Information is available on 100 subjects in the age 30 follow-up, which we call the adult follow-up. In addition, 80 subjects---40 from the control group and 40 from the treatment group---consented to the release of their criminal records. Further, 70 participants consented to the release of information regarding a full-range biomedical panel---31 from the control group and 39 from the treatment group. \\
 
-\noindent Attrition was also low for CARE subjects. Information is available on 58 subjects (more than 85\% of the initial sample) in the age-30 follow-up. Additionally, 40 participants (11 from the control group, 18 from the family education group, and 11 from the center-based childcare and family education group) released information on the full-range biomedical sweep. Administrative crime data are not available for CARE. We do not evaluate the second-phase of treatment in CARE because it was not randomized. \textbf{[JJH: but do we control for it in adjusting our treatment effects?] [JLG: we tried this as part of the exercises in which we evaluated the second-phase treatment. It makes no difference at all to add a control fro randomized into second-phase treatment in ABC. For CARE, we do not have a measure of intensity or take-up of the second phase.]} Rather, those in the center-based childcare and family education group and the family education group were offered school-age treatment, and those in the control group were not. \\
+\noindent Attrition was also low for CARE subjects. Information is available on 58 subjects (more than 85\% of the initial sample) in the age-30 follow-up. Additionally, 40 participants (11 from the control group, 18 from the family education group, and 11 from the center-based childcare and family education group) released information on the full-range biomedical sweep. Administrative crime data are not available for CARE. We do not evaluate the second-phase of treatment in CARE because it was not randomized. \textbf{[JJH: but do we control for it in adjusting our treatment effects?] [JLG: we tried this as part of the exercises in which we evaluated the second-phase treatment. It makes no difference at all to add a control for randomized into second-phase treatment in ABC. For CARE, we do not have a measure of intensity or take-up of the second phase.]} Rather, those in the center-based childcare and family education group and the family education group were offered school-age treatment, and those in the control group were not. \\
 
 \noindent In the following set of tables (Table~\ref{tab:abc_baseline} through Table~\ref{tab:health_baseline}), we compare the observed, baseline characteristics between the first-phase control and treatment groups in ABC, which are the main groups we analyze, at different stages of the data collection follow-ups. For each observed characteristic, we present the bootstrapped $p$-value associated with the standard $t$-test. We also present the bootstrapped, step-down $p$-value on jointly testing the difference in observed characteristics across the two blocks of variables separated by the horizontal line.\footnote{\citet{Lehmann_Romano_2005_testing}.}\\
 
