--- a/output/cnlsy_predict_ready.tex
+++ b/output/cnlsy_predict_ready.tex
@@ -16,7 +16,7 @@ BMI (34) &  & -123.924 & -220.034** \\
  &  & (83.036) & (107.971) \\
 Labor Income (28) &  &  & 0.534*** \\
  &  &  & (0.081) \\
-Cons& 1,153.455 & -50,441.567*** & -28,134.257*** \\
+Constant & 1,153.455 & -50,441.567*** & -28,134.257*** \\
  & (3,655.393) & (6,870.964) & (9,601.924) \\
  &  &  &  \\ \\ \midrule
 Observations & 1,880 & 1,463 & 657 \\
