--- a/output/nlsy_predict_ready.tex
+++ b/output/nlsy_predict_ready.tex
@@ -8,7 +8,7 @@ Education (30) &  & 2,047.803*** & 703.856*** \\
  &  & (61.858) & (50.738) \\
 Labor Income (28) &  &  & 0.869*** \\
  &  &  & (0.019) \\
-Cons & 14,449.919*** & -13,256.101*** & -6,000.414*** \\
+Constant & 14,449.919*** & -13,256.101*** & -6,000.414*** \\
  & (201.813) & (810.707) & (585.323) \\
  &  &  &  \\
 Observations & 10,119 & 10,119 & 9,144 \\
