--- a/output/psid_predict_ready.tex
+++ b/output/psid_predict_ready.tex
@@ -8,7 +8,7 @@ Education (30)  &  & 4,109.973*** & 1,619.779*** \\
  &  & (91.929) & (92.105) \\
 Labor Income (28) &  &  & 0.741*** \\
  &  &  & (0.014) \\
-Cons & 23,953.099*** & -30,187.589*** & -14,016.536*** \\
+Constant & 23,953.099*** & -30,187.589*** & -14,016.536*** \\
  & (289.118) & (1,167.401) & (1,080.036) \\
  &  &  &  \\ \\ \midrule
 Observations & 14,979 & 13,908 & 9,812 \\
